<resources>
    <string name="app_name">TownHall</string>
    <string name="hoodsOfZipCode">consist of neighborhoods:</string>
    <string name="food_dist_service">Food Dist. Services</string>
    <string name="events">Post event</string>
    <string name="volunteer_service">Volunteer Services</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_geolocation_up_soon">Google geolocation up soon!</string>
    <string name="comm_boards">Community Boards</string>
    <string name="map">Map</string>
    <string name="location_for_comm_board">The location for</string>
    <string name="comm_board_is_here">\'s community board is here.</string>
    <string name="title_activity_maps">Map</string>
    <string name="zip">Zip Code:</string>
    <string name="submit_a_petition">Submit a petition</string>
    <string name="submit_an_event">submit an event</string>
    <string name="sign_out">sign out</string>
    <string name="disconnect">disconnect</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>
    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>
    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="search_locations">Search locations</string>
    <string name="enter_your_borough">Enter your borough_name</string>
    <string name="bronx">Bronx</string>
    <string name="brooklyn">Brooklyn</string>
    <string name="queens">Queens</string>
    <string name="staten_island">Staten Island</string>
    <string name="submit">submit</string>
    <string name="type_new_petition">Type new petition</string>
    <string name="submit_petition">Submit a petition!</string>
    <string name="delete">delete</string>
    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Petition not saved because it is empty.</string>
    <string name="txt_community_board">Community Board: 2</string>
    <string name="txt_zip_code">Zip Code: 11432</string>
    <string name="txt_board_meeting">Board Meetings: First Thursday, 6:30 p.m.</string>
    <string name="txt_website">web:</string>
    <string name="txt_phone">phone:</string>
    <string name="txt_fax">fax:</string>
    <string name="txt_email">email:</string>
    <string name="txt_address">address:</string>
    <string name="txt_petition">Petition</string>
    <string name="txt_more_details">More Details</string>
    <string name="cv_layout_width">match_parent</string>
    <string name="cv_layout_height">wrap_content</string>
    <string name="cv_cardBackgroundColor">color/white</string>
    <string name="ll_o_layout_width">match_parent</string>
    <string name="ll_o_layout_height">wrap_content</string>
    <string name="ll_o_orientation">vertical</string>
    <string name="tv_cbt_layout_width">wrap_content</string>
    <string name="tv_cbt_layout_height">wrap_content</string>
    <string name="tv_cbt_layout_gravity">center</string>
    <string name="tv_cbt_textColor">color/black</string>
    <string name="tv_cbt_textStyle">bold</string>
    <string name="tv_zcs_layout_width">wrap_content</string>
    <string name="tv_zcs_layout_height">wrap_content</string>
    <string name="tv_zcs_layout_gravity">center_horizontal</string>
    <string name="tv_zcs_textColor">color/black</string>
    <string name="tv_bmd_layout_width">wrap_content</string>
    <string name="tv_bmd_layout_height">wrap_content</string>
    <string name="tv_bmd_layout_gravity">center_horizontal</string>
    <string name="tv_bmd_textColor">color/black</string>
    <string name="inner_ll_layout_gravity">center_horizontal</string>
    <string name="inner_ll_orientation">horizontal</string>
    <string name="tv_inner_detail_layout_height">wrap_content</string>
    <string name="tv_inner_detail_layoutGravity">center_vertical</string>
    <string name="tv_inner_detail_textColor">color/colorPrimary</string>
    <string name="iv_inner_detail_layout_height">match_parent</string>
    <string name="inner_ll_btn_layout_width">match_parent</string>
    <string name="inner_ll_btn_orientation">horizontal</string>
    <string name="ill_button_layout_width">match_parent</string>
    <string name="ill_button_layout_height">wrap_content</string>
    <string name="ill_button_background">color/button_background</string>
    <string name="ill_button_textColor">color/button_text</string>
    <string name="iv_inner_detail_bgd_website">drawable/img_v2_website</string>
    <string name="iv_inner_detail_bgd_phone">drawable/img_v2_phone</string>
    <string name="iv_inner_detail_bgd_fax">drawable/img_v2_fax</string>
    <string name="iv_inner_detail_bgd_email">drawable/img_v2_email</string>
    <string name="iv_inner_detail_bgd_globe">drawable/img_v2_globe</string>
    <string name="more_details">More Details</string>
    <string name="petition">petition</string>
    <string name="txt_vs_title">Mentor Homeless Youth</string>
    <string name="txt_vs_summary">Mentor homeless children between the ages of 2 to 12 at our weekend enrichment program</string>
    <string name="txt_vs_locality_address">Hillside Avenue</string>
    <string name="txt_vs_locality_city">Queens</string>
    <string name="txt_vs_display_url">/opportunities/5141</string>
    <string name="txt_sf_facility_name">Crooke Avenue</string>
    <string name="txt_sf_overagency_tv">NYC Department of Homeless Services</string>
    <string name="txt_sf_opname_tv">Camba</string>
    <string name="txt_sf_facility_type">Supportive Housing</string>
    <string name="txt_sf_community_board_text">Community Board: </string>
    <string name="txt_sf_community_board">314</string>
    <string name="txt_sf_facility_address">97 Crooke Avenue</string>
    <string name="txt_sf_faciity_city">Brooklyn</string>
    <string name="txt_sf_facility_borough">Brooklyn</string>
    <string name="quote">\' The best way to get involved with community boards is incrementally. Start attending meetings just as an audience member. \' - Robert Perris, District Manager of Brooklyn\'s CB2.</string>
</resources>